--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,15 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-comsumer-order80</module>
     </modules>
     <packaging>pom</packaging>
+
+    <name>Maven</name>
+    <!-- FIXME change it to the project's website -->
+    <url>http://maven.apache.org/</url>
+    <inceptionYear>2001</inceptionYear>
+
 
     <!--统一管理jar包和版本-->
     <properties>
@@ -19,7 +26,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.18.0</lombok.version>
         <mysql.version>5.1.47</mysql.version>
         <druid.verison>1.1.16</druid.verison>
         <mybatis.spring.boot.verison>1.3.0</mybatis.spring.boot.verison>
