--- a/cloud-comsumer-order80/src/main/resources/application.yml
+++ b/cloud-comsumer-order80/src/main/resources/application.yml
@@ -3,5 +3,13 @@ server:
 
 spring:
   application:
-    name: cloud-comsumer-order
+    name: cloud-order-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+
 
