--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: cloud-provider-payment8001
+    name: cloud-provider-service
 
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -11,6 +11,16 @@ spring:
     url:  jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
+
+eureka:
+  client:
+  #表示是否将自己注册进eurekaServer 默认是true
+    register-with-eureka: true
+    #是否从eurekaServer 抓取已有的注册信息，默认为true，单节点无所谓，集群默认设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
