--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -21,7 +21,9 @@ eureka:
     service-url:
       #defaultZone: http://localhost:7001/eureka
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/ #集群版
-
+  instance:
+    instance-id: provider8001
+    prefer-ip-address: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
